--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,15 @@
-add_executable(mytox main.cpp settings.cpp dbgraph.cpp dsnode.cpp
+add_executable(maga main.cpp settings.cpp dbgraph.cpp dsnode.cpp
                kmernpp.cpp util.cpp debug.cpp coverage.cpp alignment.cpp
                graphaln.cpp refcomp.cpp correctgraph.cpp crfmult.cpp
                readaln.cpp threshold.cpp)
 
-target_link_libraries(mytox readfile kmer pgm pthread libdai gmp)
+target_link_libraries(maga readfile kmer pgm pthread libdai gmp)
 
 if (ZLIB_FOUND)
-        target_link_libraries(mytox ${ZLIB_LIBRARY})
+        target_link_libraries(maga ${ZLIB_LIBRARY})
 endif (ZLIB_FOUND)
 
-install(TARGETS mytox RUNTIME DESTINATION bin)
+install(TARGETS maga RUNTIME DESTINATION bin)
 add_subdirectory(readfile)
 add_subdirectory(kmer)
 add_subdirectory(pgm)
